--- a/ProjetoPush-master/HTMLPage1.html
+++ b/ProjetoPush-master/HTMLPage1.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Sistema Push de Atualizações - Câmara dos Deputados</title>
 </head>
 <body>
     <header>
-        <h1>Câmara Push- Acompanhe as falas de seus Representantes</h1>
+        <div class="imagem-estilizada">
+            <img src="C:\Users\Mateus\Desktop\ProjetoPush-master 01-09\ProjetoPush-master\ProjetoPush-master\camara-dos-deputados-logo.png" alt="Descrição da imagem" width="200" height="auto">
+
+        </div>
+    </header>
+    <header class="cabecalho-inferior">
+        <div >
+        </div>
+        <div class="caixa-pesquisa">
+            <h1 style="font-size: 12px;font-weight: normal;">Assuntos * Institucional * Deputados * Atividade Legislativa * Comunicação * Transparência e prestação de contas     </h1>
+            <input type="text" placeholder="Pesquisar">
+            <i class="fas fa-search"></i> <!-- Ícone de lupa do FontAwesome -->
+        </div>
     </header>
     <Main>
 
