--- a/ProjetoPush-master/login.html
+++ b/ProjetoPush-master/login.html
@@ -146,7 +146,7 @@ footer {
                 // Login bem-sucedido
                 document.getElementById("login-message").textContent = "Login bem-sucedido. Redirecionando...";
                 setTimeout(function() {
-                    window.location.href = "HTMLPage1.html"; // Redirecionar para a página  após o login
+                    window.location.href = "cadastro_de_notificacao.html"; // Redirecionar para a página  após o login
                 }, 2000); // Redirecionar após 2 segundos (pode ajustar esse valor)
             } else {
                 // Login falhou
